# gbm-test-calc

./: .coverage  .gitignore  AGENTS.md  Makefile  main.py  pyproject.toml
.github/workflows/: tests.yml
.gobuildme/: config.yaml  manifest.json
.gobuildme/config/: personas.yaml
.gobuildme/memory/: constitution.md
.gobuildme/personas/: architect.yaml  data_engineer.yaml  frontend_engineer.yaml  fullstack_engineer.yaml  maintainer.yaml  ml_engineer.yaml  security_compliance.yaml
.gobuildme/scripts/: add-artifact-declarations.py  apply-condensed-next-steps-all.py  cleanup-next-steps-duplicates.py  condense-next-steps.py  extract-artifacts.py  generate-audit-report.sh  generate-missing-persona-partials.py  generate-spec-presigned-urls.py  install-git-hooks.sh  record-metadata.py  setup-gfm-pypi.sh  show-target-structure.sh  update-next-steps.py  upload-presigned-urls.py  validate-persona-gates.py  verify-docs-distribution.sh
.gobuildme/templates/: AGENTS-template.md  CLAUDE-template.md  Makefile.example.backup  _concise-style.md  ac-overrides.yaml  agent-file-template.md  checklist-template.md  design-template.md  gbm-progress-template.md  implementation-summary-template.md  plan-template.md  pm-analytics-report-template.md  pm-competitive-analysis-template.md  pm-market-research-template.md  pm-prd-template.md  pm-synthesis-template.md  pm-technical-feasibility-template.md  qa-config.yaml  qa-test-plan-template.md  qa-test-tasks-template.md  quickstart-template.md  (+6 more)
docs/: PRD.md
src/: exceptions.py  main.py  models.py
static/: index.html
tests/: conftest.py
(+448 files in other folders)
